[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Botões/selected_button_themes.tres" type="StyleBox" id=1]
[ext_resource path="res://Assets/Planos de Fundo/mesa-busto3.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Cenas Principais/Executivo.gd" type="Script" id=3]

[node name="Executivo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ideia" type="Button" parent="."]
margin_left = 145.0
margin_top = 169.0
margin_right = 295.0
margin_bottom = 319.0
custom_styles/hover = ExtResource( 1 )
text = "Idéia de Lei"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Imprensa" type="Button" parent="."]
margin_left = 345.0
margin_top = 170.0
margin_right = 495.0
margin_bottom = 320.0
custom_styles/hover = ExtResource( 1 )
text = "Imprensa"

[node name="Aprovar" type="Button" parent="."]
visible = false
margin_left = 145.0
margin_top = 370.0
margin_right = 295.0
margin_bottom = 520.0
custom_styles/hover = ExtResource( 1 )
text = "Aprovar Lei"

[node name="Voltar" type="Button" parent="."]
margin_left = 35.0
margin_top = 620.0
margin_right = 215.0
margin_bottom = 690.0
custom_styles/hover = ExtResource( 1 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Ideia" to="." method="_on_Ideia_pressed"]
[connection signal="pressed" from="Imprensa" to="." method="_on_Imprensa_pressed"]
[connection signal="pressed" from="Aprovar" to="." method="_on_Aprovar_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Button4_pressed"]
